# creden-mcp

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/creden_mcp/: __init__.py  client.py  config.py  discovery.py  models.py  page_parser.py  server.py
tests/: test_client_helpers.py  test_page_parser.py
tests/fixtures/: ad_hero.html  cloud_tech.html  mcs_steel.html
